# blender-sdg

./: .gitignore  README.md  _config.yml  index.md  pyproject.toml
Images/: README.md
Resources/: YOLO_data_generator.blend  YOLO_data_generator.blend1
Resources/Blender/: main_script.py
Tutorial/: index.md
blender_sdg/: example.config.yaml  main.py
blender_sdg/config/: __init__.py  config.py
blender_sdg/core/: model.py
blender_sdg/core/interfaces/blender/: object.py  render.py  scene.py  sweep.py  utils.py
tests/config/: test.config.yaml  test_config.py
tests/core/interfaces/blender/: test_scene.py
